# foxycon-node

./: .gitignore  Dockerfile  compose.yml  requirements.txt
foxycon-node/: Dockerfile  alembic.ini  foxycon-node.sh  node.conf  pyproject.toml  settings.py  start_node.py
foxycon-node/data_structures/: engine.py  schemes.py
foxycon-node/data_structures/migrations/: env.py
foxycon-node/data_structures/migrations/versions/: d05d3f7e4705_.py  d3fe83dee62b_.py  d924895ead8f_.py
foxycon-node/management_collected/: load_youtube.py  str_video.py
foxycon-node/management_collected/standart_api/: youtube.py
foxycon-node/service/: search_process.py
